# tradecraft

./: .appveyor.yml  .cirrus.yml  .fuzzbuzz.yml  .gitignore  .travis.yml  CODEOWNERS  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  REVIEWERS  SECURITY.md  autogen.sh  configure.ac  libfreicoinconsensus.pc.in  mit-license.txt
doc/man/: Makefile.am  bitcoin-cli.1  bitcoin-qt.1  bitcoin-tx.1  bitcoin-util.1  bitcoin-wallet.1  bitcoind.1  freicoin-cli.1  freicoin-qt.1  freicoin-tx.1  freicoin-util.1  freicoin-wallet.1  freicoind.1
src/: .clang-tidy  Makefile.am  Makefile.bench.include  Makefile.crc32c.include  Makefile.leveldb.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  Makefile.test_fuzz.include  Makefile.test_util.include  addrdb.cpp  addrdb.h  addresstype.cpp  addresstype.h  addrman.cpp  addrman.h  addrman_impl.h  alert.cpp  alert.h  allocators.cpp  allocators.h  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  attributes.h  banman.cpp  banman.h  base58.cpp  base58.h  bech32.cpp  bech32.h  bip324.cpp  bip324.h  bitcoin-chainstate.cpp  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  (+223 more)
src/bench/: .gitignore  Examples.cpp  addrman.cpp  base58.cpp  bech32.cpp  bench.cpp  bench.h  bench_bitcoin.cpp  bench_freicoin.cpp  bip324_ecdh.cpp  block_assemble.cpp  ccoins_caching.cpp  chacha20.cpp  chacha_poly_aead.cpp  checkblock.cpp  checkblockindex.cpp  checkqueue.cpp  cluster_linearize.cpp  coin_selection.cpp  crypto_hash.cpp  data.cpp  data.h  descriptors.cpp  disconnected_transactions.cpp  duplicate_inputs.cpp  ellswift.cpp  examples.cpp  gcs_filter.cpp  hashpadding.cpp  index_blockfilter.cpp  load_external.cpp  lockedpool.cpp  logging.cpp  mempool_eviction.cpp  mempool_stress.cpp  merkle_root.cpp  nanobench.cpp  parse_hex.cpp  peer_eviction.cpp  perf.cpp  (+21 more)
src/common/: args.cpp  args.h  bloom.cpp  bloom.h  config.cpp  init.cpp  init.h  interfaces.cpp  messages.cpp  messages.h  run_command.cpp  run_command.h  settings.cpp  settings.h  signmessage.cpp  signmessage.h  system.cpp  system.h  types.h  url.cpp  url.h
src/compat/: assumptions.h  byteswap.h  compat.h  cpuid.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibc_sanity_fdelt.cpp  glibcxx_compat.cpp  glibcxx_sanity.cpp  sanity.h  stdin.cpp  stdin.h  strnlen.cpp
src/consensus/: amount.cpp  amount.h  consensus.h  merkle.cpp  merkle.h  merkleproof.cpp  merkleproof.h  merklerange.cpp  merklerange.h  params.h  tx_check.cpp  tx_check.h  tx_verify.cpp  tx_verify.h  validation.h
src/crypto/: aes.cpp  aes.h  chacha20.cpp  chacha20.h  chacha20poly1305.cpp  chacha20poly1305.h  chacha_poly_aead.cpp  chacha_poly_aead.h  common.h  hex_base.cpp  hex_base.h  hkdf_sha256_32.cpp  hkdf_sha256_32.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  muhash.cpp  muhash.h  poly1305.cpp  poly1305.h  rfc6979_hmac_sha256.cpp  rfc6979_hmac_sha256.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha256_arm_shani.cpp  sha256_avx2.cpp  sha256_shani.cpp  sha256_sse4.cpp  sha256_sse41.cpp  sha256_x86_shani.cpp  sha3.cpp  sha3.h  sha512.cpp  sha512.h  siphash.cpp  (+1 more)
src/index/: base.cpp  base.h  blockfilterindex.cpp  blockfilterindex.h  coinstatsindex.cpp  coinstatsindex.h  disktxpos.h  txindex.cpp  txindex.h
src/init/: bitcoin-gui.cpp  bitcoin-node.cpp  bitcoin-qt.cpp  bitcoin-wallet.cpp  bitcoind.cpp  common.cpp  common.h  freicoin-gui.cpp  freicoin-node.cpp  freicoin-qt.cpp  freicoin-wallet.cpp  freicoind.cpp
src/interfaces/: README.md  chain.cpp  chain.h  echo.cpp  echo.h  handler.cpp  handler.h  init.cpp  init.h  ipc.h  mining.h  node.cpp  node.h  wallet.cpp  wallet.h
src/ipc/: context.h  exception.h  interfaces.cpp  process.cpp  process.h  protocol.h
src/kernel/: bitcoinkernel.cpp  blockmanager_opts.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainstatemanager_opts.h  checks.cpp  checks.h  coinstats.cpp  coinstats.h  context.cpp  context.h  cs_main.cpp  cs_main.h  disconnected_transactions.cpp  disconnected_transactions.h  freicoinkernel.cpp  mempool_entry.h  mempool_limits.h  mempool_options.h  mempool_persist.cpp  mempool_persist.h  mempool_removal_reason.cpp  mempool_removal_reason.h  messagestartchars.h  notifications_interface.h  sharechainstatemanager_opts.h  validation_cache_sizes.h  warning.h
src/logging/: timer.h
src/minisketch/: README.md  autogen.sh
src/node/: abort.cpp  abort.h  blockmanager_args.cpp  blockmanager_args.h  blockstorage.cpp  blockstorage.h  caches.cpp  caches.h  chainstate.cpp  chainstate.h  chainstatemanager_args.cpp  chainstatemanager_args.h  coin.cpp  coin.h  coins_view_args.cpp  coins_view_args.h  coinstats.cpp  coinstats.h  connection_types.cpp  connection_types.h  context.cpp  context.h  database_args.cpp  database_args.h  eviction.cpp  eviction.h  interface_ui.cpp  interface_ui.h  interfaces.cpp  kernel_notifications.cpp  kernel_notifications.h  mempool_args.cpp  mempool_args.h  mempool_persist.cpp  mempool_persist.h  mempool_persist_args.cpp  mempool_persist_args.h  miner.cpp  miner.h  mini_miner.cpp  (+24 more)
src/policy/: feerate.cpp  feerate.h  fees.cpp  fees.h  fees_args.cpp  fees_args.h  packages.cpp  packages.h  policy.cpp  policy.h  rbf.cpp  rbf.h  settings.cpp  settings.h  truc_policy.cpp  truc_policy.h  v3_policy.cpp  v3_policy.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: Makefile  README.md  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  bitcoin.cpp  bitcoin.h  bitcoin_locale.qrc  bitcoinaddressvalidator.cpp  bitcoinaddressvalidator.h  bitcoinamountfield.cpp  bitcoinamountfield.h  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  bitcoinunits.h  callback.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  createwalletdialog.cpp  createwalletdialog.h  csvmodelwriter.cpp  csvmodelwriter.h  freicoin.cpp  (+112 more)
(+2051 files in other folders)
